# git-knit

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  Justfile  README.md  pyproject.toml  specification.md
.claude/: settings.local.json
docs/plans/: 2026-01-07-code-quality-improvements.md  2026-01-07-functional-refactoring.md
src/git_knit/: cli.py  commands_logic.py  errors.py  operations.py
src/git_knit/commands/: __init__.py  _shared.py  add.py  commit.py  init.py  remove.py
src/git_knit/operations/: __init__.py  config.py  config_functions.py  core.py  executor.py  executor_functions.py  operations_functions.py  rebuilder.py  spice_detector.py
tests/: conftest.py  test_cli_commands.py  test_commands_errors.py  test_commands_logic.py  test_coverage_gaps.py  test_error_paths.py  test_operations.py  test_remaining_coverage.py
tests/test_commands/: __init__.py  test_advanced_commands.py  test_basic_commands.py
tests/test_operations/: test_config_functions.py  test_edge_cases.py  test_executor_functions.py  test_operations_functions.py
