[project]
name = "git-knit"
version = "0.1.0"
description = "Merged branch workflow tool for Git"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Author", email = "author@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "click>=8.1.0,<9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-subprocess>=1.5.0,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
]

[project.scripts]
git-knit = "git_knit.cli:cli"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.pytest]
minversion = "9.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=git_knit",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/git_knit"]
branch = true

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
